--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ img[src$='knife.svg']:nth-child(2) {
 }
 
 .row {
-    height: 960px;
+    height: 1270px;
 }
 
 .map,
@@ -75,12 +75,71 @@ img[src$='knife.svg']:nth-child(2) {
     height: 400px;
     border-left: solid black 3px;
     border-top: solid black 3px;
-    border-right:solid black 3px; 
+    border-right: solid black 3px; 
+}
+
+/* Map Infowindow */
+
+div[tabindex]:focus {
+    outline: none;
+}
+
+.infoWindow {
+    width: 220px;
+    color: black;
+    font-weight: 600;
+}
+
+.infoWindow div {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+    padding-bottom: 5px;
+    border-bottom: solid black 1px;
+}
+
+.infoWindow div h5 {
+    margin-top: 4px;
+}
+
+.infoWindow div img {
+    width: 26.5px;
+}
+
+.infoWindow h5:last-of-type {
+    margin-top: 5px;
+    margin-bottom: 0px;
+}
+
+.restaurantReview {
+    display: flex;
+    flex-direction: column;
+}
+
+.infoWindow .restaurantReview div {
+    display: flex;
+    justify-content: space-between;
+    border: none;
+    padding-bottom: none;
+    margin-bottom: -15px;
+}
+
+.infoWindow .restaurantReview img {
+    width: 23px;
+    margin-bottom: 17.5px;
+}
+
+.infoWindow .restaurantReview p strong {
+    font-size: 1.2em;
+}
+
+.infoWindow .restaurantReview p {
+    margin-bottom: 5px;
 }
 
 /* Filter Component */
 .filter {
-    height: 160px;
+    height: 220px;
     background: rgba(238, 164, 104, 0.8);
     display: flex;
     flex-direction: column;
@@ -102,14 +161,17 @@ img[src$='knife.svg']:nth-child(2) {
     padding-bottom: 8px;
 }
 
-.filter img.starHighlight {
-    filter: none;
-}
-
 div .alert {
     margin-bottom: 7.5px;
     font-size: 0.8em;
     padding: 5px;
+}
+
+.filter button {
+    font-family: helvetica;
+    font-size: 1.2em;
+    letter-spacing: 0.05em;
+    width: 75%;
 }
 
 .filter img:hover {
@@ -119,7 +181,7 @@ div .alert {
 /* Review list */
 .reviewList {
     background: rgba(168, 168, 168, 0.9);
-    height: 400px;
+    height: 650px;
     border-right: solid black 3px;
     border-left: solid black 3px;
     border-bottom: solid black 3px;
@@ -129,7 +191,8 @@ div .alert {
 }
 
 .reviewList h2 {
-    margin-top: 8px;
+    margin-top: 5px;
+    margin-bottom: auto;
 }
 
 .list-group {
@@ -151,28 +214,53 @@ div .alert {
 
 .list-group-item .address {
     font-weight: 600;
+    margin-bottom: -1px;
+}
+
+.restImg {
+    width: 100px;
+}
+
+.list-group-item div:first-of-type {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: solid black 1px;
+}
+
+.list-group-item div:first-of-type img {
+    width: 40px;
+    margin-bottom: 10px;
+}
+
+.list-group-item h4 {
+    margin-top: 8px;
+}
+
+.list-group-item h5 {
+    margin-top: 12px;
 }
 
 .list-group-item .comment {
     font-size: 1rem;
 }
 
-.filter img, .list-group-item div p img {
+.filter img, .list-group-item div.restaurantReview p img, .list-group-item div:first-of-type img, .infoWindow div img {
     filter: brightness(1) sepia(1) hue-rotate(180deg) saturate(5);
 }
 
 .list-group-item div p img {
-    width: 30px;
+    width: 28px;
     margin-bottom: 5px;
     margin-left: 5px;
 }
 
-.list-group-item div p img.yellowStar {
+.list-group-item div:first-of-type img.yellowStar, .list-group-item div.restaurantReview p img.yellowStar, .filter img.yellowStar, .infoWindow div img.yellowStar {
     filter: none;
 }
 
 .list-group-item div p:last-child {
     border-bottom: solid black 1px;
+    padding-bottom: 3px;
 }
 
 /* Footer */
@@ -258,9 +346,12 @@ footer img {
         height: 100%;
     }
     .filter {
-        height: 25%;
+        height: 33%;
         border-top: solid black 3px;
         border-left: none;
+    }
+    .filter h2 {
+        margin-bottom: -0px;
     }
     .filter img {
         width: 10%;
@@ -271,8 +362,13 @@ footer img {
         font-size: 0.89em;
         width: 100%;
     }
+    .filter button {
+        font-family: helvetica;
+        font-size: 1.1em;
+        padding: 0px;
+    }
     div .reviewList {
-        height: 75%;
+        height: 67%;
         border-left: none;
     }
     footer p {
